# ClimateYearSelection_Tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: era5_wind_100m_nl_daily.csv  synthetic_climate_data.csv
examples/: all_example_usages.py  example_usage.ipynb  fast_example_usage.py  make_synthetic_data.py
src/climate_year_selection_tool/: __init__.py  io.py  sa.py  scores.py  selector.py
