[project]
name = "climate-year-selection-tool"
version = "0.1.0"
description = "Select representative years from climate datasets using simulated annealing and sliced Wasserstein distance."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<3",
    "POT>=0.9",
    "joblib>=1.3",
    "tqdm>=4.6",
    "pyarrow",
    "fastparquet",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
